--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- start anvbar -->
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#home">
           <img src="imgs/logo.png" />
         </a>
         <button
@@ -47,21 +47,21 @@
               <a
                 class="nav-link p-2 p-lg-3 table-active"
                 aria-current="page"
-                href="#"
+                href="#home"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link p-2 p-lg-3" href="#Home">Service</a>
+              <a class="nav-link p-2 p-lg-3" href="#services">Service</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link p-2 p-lg-3" href="#Protofolio">Protofolio</a>
+              <a class="nav-link p-2 p-lg-3" href="#protofolio">Protofolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link p-2 p-lg-3" href="#stuff">About</a>
+              <a class="nav-link p-2 p-lg-3" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link p-2 p-lg-3" href="#">Contact</a>
+              <a class="nav-link p-2 p-lg-3" href="#contact">Contact</a>
             </li>
           </ul>
           <div class="search ps-3 pe-3 d-none d-lg-block">
@@ -73,9 +73,10 @@
     </nav>
     <!-- end anvbar -->
 
-    <!-- start landing -->
+    <!-- start Home -->
     <div
-      class="landing text-light d-flex justify-content-center align-items-center"
+      id="home"
+      class="home text-light d-flex justify-content-center align-items-center"
     >
       <div class="text-center">
         <h1>Taste The Creativity</h1>
@@ -83,14 +84,14 @@
         <a href="#" class="btn rounded-pill main-btn"> Get Started</a>
       </div>
     </div>
-    <!-- end landing -->
+    <!-- end Home -->
 
-    <!-- start our features -->
-    <div class="features text-center pt-5 pb-5">
+    <!-- start our services -->
+    <div class="services text-center pt-5 pb-5">
       <div class="container">
         <div class="main-title mt-5 position-relative">
-          <img class="mb-4" src="imgs/title.png" alt="" />
-          <h2>We are good at</h2>
+          <img id="services" class="mb-4" src="imgs/title.png" alt="" />
+          <h2>Services</h2>
           <p class="text-black-50 text-uppercase">some of these stuff under</p>
         </div>
         <div class="row">
@@ -142,13 +143,13 @@
         </div>
       </div>
     </div>
-    <!-- end our features -->
+    <!-- end our services -->
 
-    <!-- start our work -->
-    <div class="our-work text-center pt-5 pb-5">
+    <!-- start our protofolio -->
+    <div class="protofolio text-center pt-5 pb-5">
       <div class="container">
         <div class="main-title mt-5 position-relative">
-          <img class="mb-4" src="imgs/title.png" alt="" />
+          <img id="protofolio" class="mb-4" src="imgs/title.png" alt="" />
           <h2>We Make This</h2>
           <p class="text-black-50 text-uppercase">some of these stuff under</p>
         </div>
@@ -191,13 +192,13 @@
         </div>
       </div>
     </div>
-    <!-- end our work -->
+    <!-- end our protofolio -->
 
-    <!-- start stuff -->
-    <div class="stuff pt-5">
+    <!-- start about -->
+    <div class="about pt-5">
       <div class="container">
         <div class="main-title mt-5 mb-5 position-relative text-center">
-          <img class="mb-4" src="imgs/title.png" alt="" />
+          <img id="about" class="mb-4" src="imgs/title.png" alt="" />
           <h2>some stuff about us</h2>
           <p class="text-black-50 text-uppercase">the great team</p>
         </div>
@@ -235,7 +236,7 @@
         </div>
       </div>
     </div>
-    <!-- end stuff -->
+    <!-- end about -->
 
     <!-- start team -->
     <div class="team text-center pt-5 pb-5">
@@ -367,7 +368,7 @@
     <!-- end blogs -->
 
     <!-- start subscribe  -->
-    <div class="subscribe text-md-start text-center pt-3 pb-3">
+    <div id="contact" class="subscribe text-md-start text-center pt-3 pb-3">
       <div class="container">
         <form class="row align-items-center text-center">
           <div class="col-md-12 col-lg-3">
